--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "prettier-plugin-go-template": "0.0.15",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.3"
+  },
+  "dependencies": {
+    "decap-cms-app": "^3.6.2"
   }
 }
