--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  branch: master  # or your default branch
+  repo: WalidzBE/hugoplate  # or your default branch
 
 media_folder: "static/uploads"  # where uploaded files go
 public_folder: "/uploads"      # path in the published site
