--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: main  # or your main branch
+  branch: master  # or your main branch
   auth_type: implicit
 
 media_folder: "static/images"
