--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
-  name: git-gateway
-  branch: master  # or your main branch
+  name: github
+  repo: WalidzBE/hugoplate
+  branch: master
+  auth_type: implicit
 
 media_folder: "static/images"
 public_folder: "/images"
