--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,8 @@ backend:
   name: github
   repo: WalidzBE/hugoplate
   branch: master
-  auth_type: implicit
+  # base_url: https://hugoplateex1.netlify.app
+  # auth_endpoint: api/auth
 
 media_folder: "static/images"
 public_folder: "/images"
